added ingredients export

--- a/_posts/2024-11-15-chole.md
+++ b/_posts/2024-11-15-chole.md
@@ -8,24 +8,26 @@ categories: recipes vegetarian dinner
 Vegetarian Chole (Chickpea Curry)
 
 ## Ingredients:
-- 2 cups dried chickpeas
-- 1 large onion, finely chopped
-- 2 tomatoes, pureed
-- 2 green chilies, chopped
-- 1-inch piece of ginger, grated
-- 3 cloves garlic, minced
-- 2 tbsp vegetable oil
-- 1 tsp cumin seeds
-- 1 bay leaf
-- 1 tsp coriander powder
-- 1 tsp cumin powder
-- 1 tsp turmeric powder
-- 1/2 tsp red chili powder (adjust to taste)
-- 1/2 tsp lemon juice
-- Salt to taste
-- Fresh coriander leaves for garnish
-- 4 cups water (for cooking chickpeas)
-- 1/2 tsp baking soda (if using dried chickpeas)
+<ul class="ingredients-list">
+<li class="ingredient">2 cups dried chickpeas</li>
+<li class="ingredient">1 large onion, finely chopped</li>
+<li class="ingredient">2 tomatoes, pureed</li>
+<li class="ingredient">2 green chilies, chopped</li>
+<li class="ingredient">1-inch piece of ginger, grated</li>
+<li class="ingredient">3 cloves garlic, minced</li>
+<li class="ingredient">2 tbsp vegetable oil</li>
+<li class="ingredient">1 tsp cumin seeds</li>
+<li class="ingredient">1 bay leaf</li>
+<li class="ingredient">1 tsp coriander powder</li>
+<li class="ingredient">1 tsp cumin powder</li>
+<li class="ingredient">1 tsp turmeric powder</li>
+<li class="ingredient">1/2 tsp red chili powder (adjust to taste)</li>
+<li class="ingredient">1/2 tsp lemon juice</li>
+<li class="ingredient">Salt to taste</li>
+<li class="ingredient">Fresh coriander leaves for garnish</li>
+<li class="ingredient">4 cups water (for cooking chickpeas)</li>
+<li class="ingredient">1/2 tsp baking soda (if using dried chickpeas)</li>
+</ul>
 
 ## Instructions:
 Prepare Chickpeas:
